[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
margin_right = 260.0
margin_bottom = 180.0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBox"]
margin_top = 20.0
margin_right = 260.0
margin_bottom = 34.0
text = "ASTROFALL"
align = 1

[node name="CoinLabel" type="Label" parent="MarginContainer/VBox"]
margin_top = 38.0
margin_right = 260.0
margin_bottom = 52.0
text = "Moedas: 0"
align = 1

[node name="InfoLabel" type="Label" parent="MarginContainer/VBox"]
margin_top = 56.0
margin_right = 260.0
margin_bottom = 70.0
text = "Melhore sua nave antes de jogar!"
align = 1

[node name="SpeedButton" type="Button" parent="MarginContainer/VBox"]
margin_top = 74.0
margin_right = 260.0
margin_bottom = 94.0
text = "Comprar Velocidade (+20) - 50 moedas"

[node name="DamageButton" type="Button" parent="MarginContainer/VBox"]
margin_top = 98.0
margin_right = 260.0
margin_bottom = 118.0
text = "Comprar Dano (+1) - 75 moedas"

[node name="PlayButton" type="Button" parent="MarginContainer/VBox"]
margin_top = 122.0
margin_right = 260.0
margin_bottom = 142.0
text = "Jogar"

[node name="MessageLabel" type="Label" parent="MarginContainer/VBox"]
margin_top = 146.0
margin_right = 260.0
margin_bottom = 160.0
align = 1
[connection signal="pressed" from="MarginContainer/VBox/SpeedButton" to="." method="_on_SpeedButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/DamageButton" to="." method="_on_DamageButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/PlayButton" to="." method="_on_PlayButton_pressed"]
